Results from drawing.

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TaskActivity" />
+        <activity android:name=".ResultActivity"></activity>
     </application>
 
 </manifest>
