--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api "com.github.denzilferreira:aware-client:master-SNAPSHOT"
+    implementation 'com.jjoe64:graphview:4.2.2'
 }
-
